fix button slant clipping

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,9 +1,18 @@
 .button-container {
   display: inline-block;
-  font-size: 1.7em;
   text-align: center;
+  font-size: 1.4vw;
   overflow: hidden;
   display: flex;
+  justify-content: center;
+}
+
+.button-container-leftslant {
+  clip-path: polygon(15% 0, 100% 0, 100% 100%, 0% 100%);
+}
+
+.button-container-rightslant {
+  clip-path: polygon(0 0, 80% 0, 100% 100%, 0% 100%);
 }
 
 .button-container:hover {
@@ -15,10 +24,14 @@
   padding-right: 10px;
 }
 
-.left-slant {
-  flex-grow: 1;
+.button-caption {
+  padding: 0 5%;
 }
 
-.right-slant {
-  flex-grow: 1;
+.button-container-leftslant .button-caption {
+  padding-left: 15%;
+}
+
+.button-container-rightslant .button-caption {
+  padding-right: 15%;
 }
